<resources>
    <string name="app_name">Cinch</string>
    <string name="slogan">你今天cinch了嗎？</string>
    <string name="add_friend">交朋友</string>
    <string name="personal_data">個人資料</string>
    <string name="group_thin">揪團瘦</string>
    <string name="love_share">愛分享</string>
    <string name="hint_cinch">請輸入Cinch友會員編號</string>
    <string name="hint_pwd">請輸入密碼</string>
    <string name="hint_merchant">請輸入直銷商會員編號</string>
    <string name="privacy_and_terms">隱私權與服務條款</string>

    <string name="merchant">直銷商</string>
    <string name="cinch_friend">Cinch友</string>
    <string name="login">登  入</string>
    <string name="logout">登出</string>
    <string name="forget_psw">忘記密碼</string>
    <string name="register">註冊</string>
    <string name="register_account">註冊帳號</string>
    <string name="write_data">填寫資料</string>
    <string name="write_question">填寫問卷</string>
    <string name="done">完成</string>
    <string name="write_code">填寫驗證碼</string>
    <string name="input_ing">正在輸入</string>
    <string name="input_done">輸入完成</string>
    <string name="write_ing">正在填寫</string>
    <string name="confirm">確定</string>
    <string name="cancel">取消</string>
    <string name="pls_login">註冊成功，請登陸</string>
    <string name="pls_login2">修改密碼成功，請登陸</string>
    <string name="change_pwd_success">修改密碼成功</string>

    <!--    register1-->
    <string name="id_or_tel">ID/手機</string>
    <string name="hint_id_or_tel">請輸入ID/手機</string>
    <string name="ver_code">驗證碼</string>
    <string name="hint_ver_code">請輸入驗證碼</string>
    <string name="ver_code_err">驗證碼錯誤</string>
    <string name="psw_two_err">兩次輸入密碼不一致</string>
    <string name="password">密碼</string>
    <string name="hint_password">請輸入密碼</string>
    <string name="confirm_password">確認密碼</string>
    <string name="hint_confirm_password">請再次輸入密碼</string>
    <string name="merchant_num">直銷商會員編號</string>
    <string name="hint_merchant_num">請輸入直銷商會員編號</string>
    <string name="get_ver_code">獲取驗證碼</string>

    <!--    register2-->
    <string name="big_head">大頭貼</string>
    <string name="name">姓名</string>
    <string name="hint_name">請輸入姓名</string>
    <string name="age">年龄</string>
    <string name="hint_age">請輸入年龄</string>
    <string name="age_unit">歲</string>
    <string name="sex">性別</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="tel">聯絡電話</string>
    <string name="hint_tel">請輸入聯絡電話</string>
    <string name="height">身高</string>
    <string name="hint_height">請輸入身高</string>
    <string name="weight">體重</string>
    <string name="hint_weight">請輸入體重</string>
    <string name="fat">體脂</string>
    <string name="hint_fat">請輸入體脂</string>
    <string name="bmi">BMI</string>
    <string name="target">目標</string>
    <string name="hint_target">請輸入目標</string>
    <string name="remark">備註</string>
    <string name="hint_remark">請輸入備註</string>
    <string name="suggest">建議產品</string>
    <string name="hint_suggest">請輸入建議產品</string>

    <string name="next_step">下一步</string>
    <string name="save">儲存</string>

    <!--    register3-->
    <string name="question_answer">日常狀況問答</string>
    <string name="often">常常</string>
    <string name="sometime">偶爾</string>
    <string name="little">很少</string>
    <string name="no_answer">無數據</string>
    <string name="question1">1、一周超過3次超時工作或超過12點睡</string>
    <string name="question2">2、能搭車就不會走路,或每週至少吃2次以上甜點或喝含糖飮料</string>
    <string name="question3">3、一週超過3次需應酬吃大餐或喝酒,或餐餐一定要吃到飽</string>
    <string name="question4">4、一遇排便次數少於2次,或即使有排便還是覺得解不乾淨</string>
    <string name="question5">5、容易水腫及手腳冰冷,尤其到下午下半身更明顯</string>
    <string name="question6">6、臉上易泛紅,常覺得燥熱,或喜愛吃高熱量宵夜,且肥胖部位集中在腰、臀、大腿</string>

    <!--    忘記密碼-->
    <string name="old_pwd">舊密碼</string>
    <string name="new_pwd">新密碼</string>

    <!--    個人資料-->
    <string name="task">任務</string>
    <string name="change_data">修改資料</string>
    <string name="change_pwd">修改密碼</string>
    <string name="see_detail">體態詳情一覽</string>
    <string name="personal_head">個人大頭貼</string>
    <string name="album_choose">相簿選擇</string>
    <string name="camera">相機</string>
    <string name="get_data_err">獲取用戶最新資料失敗</string>
    <string name="get_useid_err">獲取用戶ID失敗</string>

    <!--    揪團瘦-->
    <string name="search_activity">搜尋想參加的揪團活動</string>
    <string name="no_search_task">查無任務</string>
    <string name="scan_to_join_task">掃碼加入任務</string>
    <string name="confirm_join_task">確認加入任務</string>
    <string name="task_list">任務列表</string>
    <string name="see_task">查看任務</string>
    <string name="join_success">加入成功</string>
    <string name="join_success_info">任務已成功加入，請返回Cinch揪團瘦列表查看</string>
    <string name="join_err">加入失敗</string>
    <string name="join_err_info">任務加入失敗，原因可能為人數已達上限、活動已開始或逾期，建議洽直銷商處理</string>

    <string name="join_time">參加時間</string>
    <string name="no_join_task">尚未參加任何任務</string>

    <!--    交朋友-->
    <string name="search_name">搜尋名字</string>
    <string name="search">搜索</string>
    <string name="old_friend">老朋友</string>
    <string name="new_friend">新朋友</string>
    <string name="add_time">加入時間</string>
    <string name="find_no_old_friend">查無此潛在客戶</string>
    <string name="find_no_new_friend">尚無新朋友</string>
    <string name="add_cinch">新增客戶</string>
    <string name="add_cinch_success">新增客戶成功</string>

    <string name="see_friend_data">查看客戶資料</string>
    <string name="delete_data">刪除該資料</string>

    <string name="see_task_data">查看任務詳情</string>

    <string name="ing">進行中</string>
    <string name="over">已結束</string>
    <string name="confirm_delete_task">確定刪除該任務</string>
    <string name="confirm_delete_data">確定刪除該資料</string>
    <string name="confirm_delete">確定刪除</string>
    <string name="task_ranking">任務排名</string>

    <!--    新增任務-->
    <string name="add_task">新建任務 </string>
    <string name="task_name">活動名稱</string>
    <string name="hint_task_name">請輸入活動名稱</string>
    <string name="task_info">活動簡介</string>
    <string name="hint_task_info">請輸入活動簡介</string>
    <string name="task_time">活動期間</string>
    <string name="hint_task_time">請選擇活動期間</string>
    <string name="task_people_num">組隊人數</string>
    <string name="hint_task_people_num">請輸入組隊人數</string>
    <string name="task_target">目\t\t\t\t標</string>
    <string name="hint_task_target">請輸入活動目標</string>
    <string name="scoring_method">計分方式</string>
    <string name="hint_scoring_method">請選擇計分方式</string>
    <string name="task_reward">任務獎項</string>
    <string name="add">新增</string>
    <string name="confirm_add">確認新增</string>
    <string name="add_ing">新增中</string>
    <string name="add_done">新增完成</string>

    <!--    任務詳情-->
    <string name="task_people">任務成員</string>
    <string name="task_detail">任务详情</string>
    <string name="web_url">網址：</string>

    <string name="upload_data">上傳資料</string>
    <string name="share_content">分享內容</string>
    <string name="no_upload">當日未上傳</string>
    <string name="last">上一筆</string>
    <string name="next">下一筆</string>
    <string name="local_data_err">本地數據錯誤，請嘗試重啓App</string>

    <!--    客戶資料-->
    <string name="friend_data">客戶資料</string>
    <string name="answer">答案</string>
    <string name="data_analysis">資料分析</string>
    <string name="personal_suggest">個人專屬營養建議</string>
    <string name="more_standard">超標</string>
    <string name="normal">正常</string>
    <string name="normal_value">正常\n&lt;24</string>
    <string name="more_standard_value">超標\n≥24</string>
    <string name="standard">標準</string>
    <string name="fat_more_data">體脂肪超標數據</string>
    <string name="little30age">30歲以下</string>
    <string name="more30age">30歲以上</string>
    <string name="m">男生</string>
    <string name="f">女生</string>
    <string name="more20">大於20%</string>
    <string name="more25">大於25%</string>
    <string name="more30">大於30%</string>
    <string name="target_set">目標設定</string>
    <string name="fat_target">體脂目標</string>
    <string name="weight_target">體重目標</string>
    <string name="fat_type">肥胖類型</string>
    <string name="usual_answer">日常狀況答案</string>
    <string name="will_change_table">體重預估變化圖</string>
    <string name="start">開始</string>
    <string name="month1">第一個月</string>
    <string name="month2">第二個月</string>
    <string name="month3">第三個月</string>
    <string name="month4">第四個月</string>
    <string name="month5">第五個月</string>
    <string name="change">修改</string>
    <string name="share">分享</string>
    <string name="judg">判斷為</string>
    <!--    肥胖類型-->
    <string name="fat1">健康族</string>
    <string name="fat1_info">體重正常，請繼續維持。</string>
    <string name="fat2">糖切族</string>
    <string name="fat2_info">中廣型肥胖，建議減少精緻醣類攝取及搭配產品維持良好體態。</string>
    <string name="fat3">油切族</string>
    <string name="fat3_info">下半身肥胖，建議減少高熱量或肉類食物攝取，並搭配產品讓自己達到理想目標。</string>
    <string name="fat4">代謝厭力族</string>
    <string name="fat4_info">壓力造成整體身形看起來偏壯，建議多增加活動量，同時搭配紓壓產品。</string>
    <string name="fat5">消化不良族</string>
    <string name="fat5_info">外觀不胖，但小腹凸出且有消化不好的情況，要多補充好菌，維持消化道健康。</string>
    <string name="fat6">特殊族群</string>
    <string name="fat6_info">BMI小於18.5，判斷為體重過輕，請依需求建議產品。</string>

</resources>
