<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_head"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:text="@string/big_head"
            android:textColor="@color/color_6b"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@mipmap/female_head"></ImageView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_right_arrow"></ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/name"
            android:lines="1"
            android:textColor="@color/color_6b"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:ems="10"
            android:hint="@string/hint_name"
            android:lines="1"
            android:gravity="right|center"
            android:padding="8dp"
            android:textColor="@color/color_6b"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/age"
            android:lines="1"
            android:textColor="@color/color_6b"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_age"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:ems="10"
            android:lines="1"
            android:hint="@string/hint_age"
            android:gravity="right|center"
            android:inputType="number"
            android:padding="8dp"
            android:textColor="@color/color_6b"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:text="@string/sex"
            android:textColor="@color/color_6b"
            android:textSize="14sp" />

<!--        <EditText-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="1"-->
<!--            android:background="@color/transparent"-->
<!--            android:ems="10"-->
<!--            android:gravity="right|center"-->
<!--            android:padding="8dp"-->
<!--            android:textColor="@color/color_6b"-->
<!--            android:textSize="14sp" />-->
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="16dp"
                android:textColor="@color/color_6b"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/color_6b"
                android:checked="true"
                android:text="@string/female" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/tel"
            android:lines="1"
            android:textColor="@color/color_6b"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_tel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:ems="10"
            android:lines="1"
            android:gravity="right|center"
            android:hint="@string/hint_tel"
            android:inputType="phone"
            android:padding="8dp"
            android:textColor="@color/color_6b"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="@color/fb" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/height"
            android:textColor="@color/color_6b"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_height"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:ems="10"
            android:gravity="right|center"
            android:lines="1"
            android:inputType="number"
            android:hint="@string/hint_height"
            android:padding="8dp"
            android:textColor="@color/color_6b"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="cm"
            android:textColor="@color/color_6b"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/weight"
            android:textColor="@color/color_6b"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_weight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:ems="10"
            android:lines="1"
            android:gravity="right|center"
            android:hint="@string/hint_weight"
            android:inputType="number"
            android:padding="8dp"
            android:textColor="@color/color_6b"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="kg"
            android:textColor="@color/color_6b"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/fat"
            android:textColor="@color/color_6b"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_fat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:ems="10"
            android:lines="1"
            android:gravity="right|center"
            android:hint="@string/hint_fat"
            android:inputType="number"
            android:padding="8dp"
            android:textColor="@color/color_6b"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="%"
            android:textColor="@color/color_6b"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/bmi"
            android:textColor="@color/color_6b"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_bmi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:ems="10"
            android:lines="1"
            android:gravity="right|center"
            android:padding="8dp"
            android:textColor="@color/color_6b"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="kg/m²"
            android:textColor="@color/color_6b"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/target"
            android:textColor="@color/color_6b"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3"
            android:background="@color/transparent"
            android:ems="10"
            android:hint="@string/hint_target"
            android:gravity="right|center"
            android:padding="8dp"
            android:textColor="@color/color_6b"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/remark"
            android:textColor="@color/color_6b"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_remark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="3"
            android:background="@color/transparent"
            android:ems="10"
            android:gravity="right|center"
            android:hint="@string/hint_remark"
            android:padding="8dp"
            android:textColor="@color/color_6b"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_next_step"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/yellow_btn"
        android:gravity="center"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:textSize="15sp" />
</LinearLayout>