<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UI.Account.LoginActivity">

    <com.youth.banner.Banner
        android:id="@+id/banner"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/main_top_bg"
        app:indicator_drawable_selected="@drawable/oval_yellow"
        app:indicator_drawable_unselected="@drawable/oval_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.youth.banner.Banner>

    <TextView
        android:id="@+id/tv_cinch"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:text="@string/cinch_friend"
        android:textColor="@color/yellow"
        app:layout_constraintBottom_toBottomOf="@+id/tv_merchant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.76"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_merchant" />

    <TextView
        android:id="@+id/tv_merchant"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_check_btn"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:text="@string/merchant"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/banner"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner" />

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="8dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/dash_line_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_merchant" />

    <EditText
        android:id="@+id/et_account"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="@android:dimen/app_icon_size"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@android:dimen/app_icon_size"
        android:background="@drawable/et_bg"
        android:ems="10"
        android:inputType="number"
        android:paddingLeft="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="@android:dimen/app_icon_size"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@android:dimen/app_icon_size"
        android:background="@drawable/et_bg"
        android:ems="10"
        android:inputType="textWebPassword"
        android:hint="@string/hint_pwd"
        android:paddingLeft="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_account" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toTopOf="@+id/et_password"
        app:srcCompat="@drawable/ic_password" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_account"
        app:layout_constraintStart_toStartOf="@+id/et_account"
        app:layout_constraintTop_toTopOf="@+id/et_account"
        app:srcCompat="@drawable/ic_account" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/yellow_btn"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:id="@+id/tv_term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textColor="@color/color_d2"
        android:text="@string/privacy_and_terms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_forget_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_psw"
        android:padding="4dp"
        app:layout_constraintStart_toStartOf="@+id/tv_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_login" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_login" />

</android.support.constraint.ConstraintLayout>