<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rootLayout"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="@android:dimen/app_icon_size"
        android:layout_marginEnd="1dp"
        android:background="@drawable/dialog_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView26">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/confirm_delete_data"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/yellow_circle_btn"
            android:gravity="center"
            android:text="@string/confirm_delete"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:gravity="center"
            android:text="@string/cancel" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/delete" />

</android.support.constraint.ConstraintLayout>